--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "overtrue/laravel-ueditor": "~1.0"
+        "mrgoon/aliyun-sms": "dev-master",
+        "overtrue/laravel-ueditor": "~1.0",
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^2.23"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
